[fix] 필요한 부분만 살림.

--- a/device3/Makefile
+++ b/device3/Makefile
@@ -8,7 +8,7 @@ CFLAGS = -g
 LIBS = -lpthread -lcjson
 
 # 소스 파일
-SRCS = main.c getLight.c led.c ft_strdup.c ft_itoa.c
+SRCS = main.c getLight.c led.c
 
 # 객체 파일
 OBJS = $(SRCS:.c=.o)
